<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="size_of_group">Size of group</string>
    <string name="display_date">Display Date</string>
    <string name="display_time">Display Time</string>
    <string name="non_smoking_table">Non-smoking table</string>
    <string name="reset">Reset</string>
    <string name="smoking_table">Smoking Table</string>
    <string name="confirm_reservation">CONFIRM RESERVATION</string>
    <string name="details">Details</string>
</resources>
